--- a/index.html
+++ b/index.html
@@ -1,3 +1,19 @@
-Hello, first test.
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-https://alvarogonzalezferrer.github.io/
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+    <title>Alvaro Gonzalez Ferrer - developer page</title>
+  </head>
+  <body>
+    <h1>Alvaro Gonzalez Ferrer</h1>
+    
+    <p>Welcome to my website. Under construction</p>
+
+  </body>
+</html>
