--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
   <div class="container">
     <h1>Alvaro Gonzalez Ferrer</h1>
+    <h2>UNDER CONSTRUCTION</h2>
 
     <p>
       Thanks for visiting my page!
@@ -37,7 +38,7 @@
 
     </p>
 
-    <p>Welcome to my website. Under construction</p>
+
 
     <canvas id="c" width="800" height="600"></canvas>
 
