--- a/index.html
+++ b/index.html
@@ -27,14 +27,20 @@
       I often release source code of my projects, when I have the proper license to do so. Many others of my projects are secret, or protected by intellectual rights, and I cannot release them, so thanks for asking, but no ;)
     </p>
 
+    <h2>Incomplete portfolio</h2>
+    <p>You can find my projects at my GitHub page, lots of cool stuff!
+
+      <br>
+      <a href='https://github.com/alvarogonzalezferrer'>MY GitHub</a>
+    </p>
     <p>
-      Dont forget to check my old sourceforge user, KRONOPIO!
+      Don't forget to check my old sourceforge user, KRONOPIO!
     </p>
     <p>
       Lots of cool stuff there, Im migrating it to GitHub
     </p>
     <p>
-      <a href='https://sourceforge.net/u/kronopio/profile/'>KRONOPIO SOURCEFORGE</a>
+      <a href='https://sourceforge.net/u/kronopio/profile/'>My SOURCEFORGE</a>
 
     </p>
 
