--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <div class="container">
     <h1>Alvaro Gonzalez Ferrer</h1>
-    <h2>UNDER CONSTRUCTION</h2>
+    <h2>Computer Science Licentiate</h2>
 
     <p>
       Thanks for visiting my page!
@@ -26,29 +26,279 @@
       <br>
       Have been developing software since I was a kid, starting in a old Commodore 64.
       <br>
+      I'm a computer science graduate from Argentina.
+      <br>
       Worked many years as indie game developer, and also game developer for some very known game studios.
       <br>
       I often release source code of my projects, when I have the proper license to do so. Many others of my projects are secret, or protected by intellectual rights, and I cannot release them, so thanks for asking, but no ;)
     </p>
 
-    <h2>Incomplete portfolio</h2>
-    <p>You can find my projects at my GitHub page, lots of cool stuff!
+    <h2>Portfolio</h2>
 
-      <br>
-      <a href='https://github.com/alvarogonzalezferrer'>MY GitHub</a>
-    </p>
-    <p>
-      Don't forget to check my old sourceforge user, KRONOPIO!
-    </p>
-    <p>
-      Lots of cool stuff there, Im migrating it to GitHub
-    </p>
-    <p>
-      <a href='https://sourceforge.net/u/kronopio/profile/'>My SOURCEFORGE</a>
+    <p>I have worked on many, many, many diverse projects. This are just a few, the featured ones are mostly released freely to the public as open source software. The commercial projects are non released because of copyright reasons.</p>
 
-    </p>
+    <div class="container">
 
-<br><br>
+      <div class="row">
+
+        <div class="col-sm-6">
+          <div class="card h-100">
+            <div class="card-header">
+              Featured C++ game - Award winner
+            </div>
+            <img src="screens/kball.jpg" class="card-img-top" alt="KBall game">
+            <div class="card-body">
+              <h5 class="card-title">KBall</h5>
+              <p class="card-text">A game of skill and reflexes, non violent, suitable for all ages, hours of fun!
+                <br>
+                Move the ball around the level map, without falling, without running out of time, and getting the prizes, in order to reach the exit. Full map editor included!<br>
+                Award winner at 2004 UTN (National Technological University) ADVA (Association of video game developers of Argentina) match.
+                <br> Done in C++, closs platform.
+                <br> Works in MS DOS, Linux, Windows and more!
+                <br>Also available from Linux repositories like Ubuntu, Debian, etc</p>
+                <a href="https://sourceforge.net/projects/kball/" class="btn btn-primary" target='_blank'>Go to KBall!</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-sm-6">
+            <div class="card h-100">
+              <div class="card-header">
+                Featured C++ game
+              </div>
+              <img src="screens/kraptor.jpg" class="card-img-top" alt="Kraptor game">
+              <div class="card-body">
+                <h5 class="card-title">Kraptor</h5>
+                <p class="card-text">A old school space ship shooter, done in C++, closs platform.
+                  Kraptor is a classic shoot 'em up scroller game, where you must fight against tons of bad dudes.
+                  <br>
+                  This is a full game with massive destruction, powerful weapons, and high speed action in varied levels.
+                  <br>
+                  Works in MS DOS, Linux, Windows and more! You can also download it from Linux repositories like Ubuntu, Debian, etc</p>
+                  <a href="https://sourceforge.net/projects/kraptor/" class="btn btn-primary" target='_blank'>Get Kraptor!</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- row -->
+          <BR>
+            <div class="row">
+              <div class="col-sm-6">
+                <div class="card h-100">
+                  <div class="card-header">
+                    Gift for a friend.
+                  </div>
+                  <img src="screens/nacho.jpg" class="card-img-top" alt="Nacho game">
+                  <div class="card-body">
+                    <h5 class="card-title">Nacho Blaster</h5>
+                    <p class="card-text">A gift game for a friend, Nacho. Coded in C++ and Allegro.
+                      <br>All graphics, sound, music, etc done by me.
+                      <br>Features a very interesting particle and explosion engine. Very fast algorithms too.
+                      <br>A work of friendship, was done from scratch in about one week. Includes sound, very cool effects and graphics.
+                    </p>
+
+                      <a href="https://github.com/alvarogonzalezferrer/Blast-Nacho" class="btn btn-primary" target='_blank'>Nacho BLASTER!</a>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-sm-6">
+                  <div class="card h-100">
+                    <div class="card-header">
+                      Old school graphic adventure engine
+                    </div>
+                    <img src="screens/aventura.jpg" class="card-img-top" alt="Adventure game">
+                    <div class="card-body">
+                      <h5 class="card-title">Graphical adventure</h5>
+                      <p class="card-text">This is not only a graphic adventure in the style of old Lucasarts classics, but also a ENGINE and special language developed to make graphics adventures.
+                        This was coded when I was 16 years old using a 486 and mostly ASIC and ASSEMBLER.
+                        Programmed around 1998-1999, inspired on Full Throttle and many more adventures (Loom, Day of the Tentacle, etc)
+                        <br>
+                        The engine has its own scripting language, which allows creating generic graphic adventures.
+                        <br>
+                        Very inspired by old text adventures, and LucasArts games
+                        <br>
+                        To play it, use MS-DOS, or an emulator like DOSBOX ... there are compiled binaries and two graphic adventures, a short demo, and a complete graphic adventure to play!
+                      </p>
+                      <a href="https://github.com/alvarogonzalezferrer/aventura_grafica" class="btn btn-primary" target='_blank'>Time for adventure!</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- end row -->
+
+              <!-- row -->
+              <BR>
+                <div class="row">
+                  <div class="col-sm-6">
+                    <div class="card h-100">
+                      <div class="card-header">
+                        Arcade classic, re done for fun.
+                      </div>
+                      <img src="screens/kronoide.jpg" class="card-img-top" alt="Kronoide game">
+                      <div class="card-body">
+                        <h5 class="card-title">Kronoide</h5>
+                        <p class="card-text">
+                          A Breakout / Arkanoide game. Can be played using DOSBOX.
+                          <br>
+                          Breakout is an arcade game developed and published by Atari, Inc., and released on May 13, 1976. It was conceptualized by Nolan Bushnell and Steve Bristow, influenced by the seminal 1972 Atari arcade game Pong, and built by Steve Wozniak, aided by Steve Jobs.
+                          <br>
+                          Breakout was the basis and inspiration for certain aspects of the Apple II personal computer. In 1978, the game was ported to the Atari 2600 and a sequel was made, Super Breakout, which four years later became the "pack-in game" for the Atari 5200 console. Breakout spawned an entire genre of Breakout clones, and the concept found new legs with Taito's 1986 Arkanoid, which itself spawned dozens of imitators.
+                        </p>
+
+                          <a href="https://github.com/alvarogonzalezferrer/kronoide" class="btn btn-primary" target='_blank'>Retro fun awaits!</a>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="col-sm-6">
+                      <div class="card h-100">
+                        <div class="card-header">
+                          Artillery game for up to 10 players.
+                        </div>
+                        <img src="screens/ktank.jpg" class="card-img-top" alt="KTank game">
+                        <div class="card-body">
+                          <h5 class="card-title">KTank</h5>
+                          <p class="card-text">Artillery game for up to 10 players. Input angle and power and try to destroy your opponents.
+                            <br>
+                            Features randomly generated destroyable terrain, up to 10 players in hot seat setup.
+                            <br>
+                            A very fun game to play on a rainy day!
+                            <br>
+                            To play it, use MS-DOS, or an emulator like DOSBOX ...
+                            <br>Note, there used to be a version that lets you play against the computer too (and not only humans), sadly was lost in some crashed diskettes. Will be re-done soon.
+                          </p>
+                          <a href="https://github.com/alvarogonzalezferrer/ktank" class="btn btn-primary" target='_blank'>Play with friends!</a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- end row -->
+
+                  <!-- row -->
+                  <BR>
+                    <div class="row">
+                      <div class="col-sm-6">
+                        <div class="card h-100">
+                          <div class="card-header">
+                            Light weight data grip for PHP and MySQL
+                          </div>
+                          <img src="screens/datagrid.jpg" class="card-img-top" alt="Datagrid">
+                          <div class="card-body">
+                            <h5 class="card-title">KronoDataGrid</h5>
+                            <p class="card-text">
+                              I needed a lightweight data grid for some commercial projects, and all were very bloated and expensive, so I developed this super light weight data grid.
+                              Useful things in this project:
+                              <ul>
+                                <li>
+                                  A data grid with editable tools, kronoDataGrid.php, very light weight</li>
+                                  <li>  A RANDOM name and surname generator for your projects, in install/index.php and supporting files.</li>
+                                  <li>  A very lightweight MySQL connect wrapper. Check connectMySQL.php</li>
+                                </ul>
+
+                                You dont need bloated code to be productive.
+                              </p>
+
+                              <a href="https://github.com/alvarogonzalezferrer/kronodatagrid" class="btn btn-primary" target='_blank'>Datagrid for you!</a>
+                            </div>
+                          </div>
+                        </div>
+
+                        <div class="col-sm-6">
+                          <div class="card h-100">
+                            <div class="card-header">
+                              A operating system for very old computers.
+                            </div>
+                            <img src="screens/krjr.jpg" class="card-img-top" alt="Desktop">
+                            <div class="card-body">
+                              <h5 class="card-title">Kr Jr</h5>
+                              <p class="card-text">
+                                Once upon a time, I coded a GUI operating system for old computers.<br>
+                                Never finished this huge project, but it is in a stage where it runs and can be tested on old computers or a virtual machine.<br>
+                                You have a working desktop, a working boot sequence and can run MS DOS software and games.<br>
+                                It is SUPER FAST. Even running on a virtual machine emulator, it will work fast. Mostly C and Assembler code.<br>
+                                It can run even in a 386 with 1mb RAM and no HD
+It fits on a diskette! Recycle your old PC! Inspired on micro kernels such as QNX, but the code is 100% my production, not based on any other kernels.
+                              </p>
+                              <a href="https://sourceforge.net/projects/kronojunior/" class="btn btn-primary" target='_blank'>Retro fun!</a>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <!-- end row -->
+
+                      <!-- row -->
+                      <BR>
+                        <div class="row">
+                          <div class="col-sm-6">
+                            <div class="card h-100">
+                              <div class="card-header">
+                                Guitar and string instrument scales, afination and chords.
+                              </div>
+                              <img src="screens/guitar.jpg" class="card-img-top" alt="Guitar">
+                              <div class="card-body">
+                                <h5 class="card-title">GNUitarra</h5>
+                                <p class="card-text">
+                                  Krono's GNUitarra is a light-fast, all-in-one helper for the guitar and string instrument musical player.
+<br>
+Supports lots of instruments!
+<br>
+Guitarra, bajo, Balalaika, bandola, banjo, Bozouki, Cavaquinho,Charango, cuatro, dulcimer, guitarra portuguesa, guitarron, hawayana, flamenca, jarana, laud, mandola, mandolina, sitar, timple, tres, ukelele, vihuela, etc
+<br>
+Has more than +4000 scale types, +60 chord types, +60 string instruments (i.e bass).
+<br>
+Can automake solos, learning excersises, etc.
+<br>
+Works even in a 386! For MS-DOS, Windows, Linux
+<br>
+Very fast, low memory, low disk footprint, runs on very cheap hardware!
+<br>
++4000 scales
+<br>
++60 chord types
+<br>
++60 instruments: guitarra, bajo, Balalaika, bandola, banjo, Bozouki, Cavaquinho,Charango, cuatro, dulcimer, guitarra portuguesa, guitarron, hawayana, flamenca, jarana, laud, mandola, mandolina, sitar, timple, tres, ukelele, vihuela, etc
+                                  </p>
+
+                                  <a href="https://github.com/alvarogonzalezferrer/kronognuguitarra" class="btn btn-primary" target='_blank'>Time for a virtuos solo!</a>
+                                </div>
+                              </div>
+                            </div>
+
+                            <div class="col-sm-6">
+                              <div class="card h-100">
+                                <div class="card-header">
+                                  Always releasing new code for the benefit of the people.
+                                </div>
+                                <img src="screens/opensource.png" class="card-img-top" alt="Open Source">
+                                <div class="card-body">
+                                  <h5 class="card-title">GitHub & SourceForge</h5>
+                                  <p class="card-text">
+                                    I have lots more projects, algorithms, and cool stuff to release, to show, update and improve.<br>
+                                    You can find more of my works, ideas, projects, and hobbies and my GitHub, SourceForge and LinkedIn pages.<br>
+                                    Soon I will be updating also my hardware projects.<br>
+                                  </p>
+                                  <p>
+                                    <a href="https://github.com/alvarogonzalezferrer" class="btn btn-primary" target='_blank'>GitHub</a>
+                                  </p>
+                                  <p>
+                                    <a href="https://sourceforge.net/u/kronopio/profile/" class="btn btn-primary" target='_blank'>Sourceforge</a>
+                                  </p>
+                                  <p>
+                                    <a href="https://ar.linkedin.com/in/alvarogonzalezf" class="btn btn-primary" target='_blank'>LinkedIn</a>
+                                  </p>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                          <!-- end row -->
+
+            </div>
+
+
+
+<br>Bonus track :P<br>
 
     <canvas id="c" width="800" height="600"></canvas>
 
