--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.4.1/cyborg/bootstrap.min.css">
 
 
-  <title>Alvaro Gonzalez Ferrer - developer page</title>
+  <title>Álvaro González Ferrer - developer page</title>
 </head>
 <body>
   <div class="container">
-    <h1>Alvaro Gonzalez Ferrer</h1>
+    <h1>Álvaro González Ferrer</h1>
     <h2>Computer Science Licentiate</h2>
 
     <p>
       Thanks for visiting my page!
       <br>
-      Im Alvaro, also known as Krono, Kronopio and many others "noms de guerre".
+      Im Álvaro, also known as Krono, Kronopio and many others "noms de guerre".
       <br>
       Have been developing software since I was a kid, starting in a old Commodore 64.
       <br>
@@ -286,7 +286,7 @@ Very fast, low memory, low disk footprint, runs on very cheap hardware!
                                     <a href="https://sourceforge.net/u/kronopio/profile/" class="btn btn-primary" target='_blank'>Sourceforge</a>
                                   </p>
                                   <p>
-                                    <a href="https://ar.linkedin.com/in/alvarogonzalezf" class="btn btn-primary" target='_blank'>LinkedIn</a>
+                                    <a href="https://ar.linkedin.com/in/ÁlvaroGonzálezf" class="btn btn-primary" target='_blank'>LinkedIn</a>
                                   </p>
                                 </div>
                               </div>
@@ -311,7 +311,7 @@ Very fast, low memory, low disk footprint, runs on very cheap hardware!
 
     // mensaje de acerca de...
     var mensaje = [
-      "Alvaro 'Kronoman' Gonzalez",
+      "Álvaro 'Kronoman' González",
       "Since 1982, doing quality software.",
       "El artesano del software.",
       "En memoria de mi querido padre.",
