--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <div class="container">
     <h1>Álvaro González Ferrer</h1>
-    <h2>Computer Science Licentiate</h2>
+    <h2>Graduated in Computer Science</h2>
 
     <p>
       Thanks for visiting my page!
@@ -26,9 +26,9 @@
       <br>
       Have been developing software since I was a kid, starting in a old Commodore 64.
       <br>
-      I'm a computer science graduate from Argentina.
+      I'm a Computer Science graduate from Argentina, game developer, and hobbyist with many interests..
       <br>
-      Worked many years as indie game developer, and also game developer for some very known game studios.
+      I have many years of experience as indie game developer, and also developed for some very known game studios, and business software for small enterprises.
       <br>
       I often release source code of my projects, when I have the proper license to do so. Many others of my projects are secret, or protected by intellectual rights, and I cannot release them, so thanks for asking, but no ;)
     </p>
