--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@ Very fast, low memory, low disk footprint, runs on very cheap hardware!
 <br>Bonus track :P<br>
 
 <!-- TODO do this canvas responsive to screen size, maybe add some mini game custom made -->
-    <canvas id="c" width="100%" height="600"></canvas>
+    <canvas id="c" width="800" height="600"></canvas>
 
     <script>
     // efecto matrix
