--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                               <a href="https://sourceforge.net/u/kronopio/profile/" class="btn btn-primary" target='_blank'>Sourceforge</a>
                             </p>
                             <p>
-                              <a href="https://ar.linkedin.com/in/ÁlvaroGonzálezf" class="btn btn-primary" target='_blank'>LinkedIn</a>
+                              <a href="https://ar.linkedin.com/in/alvarogonzalezf" class="btn btn-primary" target='_blank'>LinkedIn</a>
                             </p>
                           </div>
                         </div>
