--- a/index.html
+++ b/index.html
@@ -29,6 +29,16 @@
       I often release source code of my projects, when I have the proper license to do so. Many others of my projects are secret, or protected by intellectual rights, and I cannot release them, so thanks for asking, but no ;)
     </p>
 
+    <p>Some of my repositories, I'm always releasing new code, check it often!</p>
+
+    <p>
+      <a href="https://github.com/alvarogonzalezferrer" class="btn btn-primary" target='_blank'>GitHub</a>
+
+      <a href="https://sourceforge.net/u/kronopio/profile/" class="btn btn-primary" target='_blank'>Sourceforge</a>
+
+      <a href="https://ar.linkedin.com/in/alvarogonzalezf" class="btn btn-primary" target='_blank'>LinkedIn</a>
+    </p>
+
     <h2>Portfolio</h2>
 
     <p>I have worked on many, many, many diverse projects. This are just a few, the featured ones are mostly released freely to the public as open source software. The commercial projects are non released because of copyright reasons.</p>
